/*
  Cosmo Dashboard API
  Manipulate cosmo dashboard resource API
*/

syntax = "proto3";

package dashboard.v1alpha1;

import "dashboard/v1alpha1/user.proto";
import "dashboard/v1alpha1/event.proto";
import "validate/validate.proto";

import "google/protobuf/timestamp.proto";

service UserService {
  // Delete user by ID
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  // Returns a single User model
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  // Returns an array of User model
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
  // Returns events for User
  rpc GetEvents(GetEventsRequest) returns (GetEventsResponse);
  // Create a new User
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  // Update user display name
  rpc UpdateUserDisplayName(UpdateUserDisplayNameRequest)
      returns (UpdateUserDisplayNameResponse);
  // Update a single User password
  rpc UpdateUserPassword(UpdateUserPasswordRequest)
      returns (UpdateUserPasswordResponse);
  // Update a single User role
  rpc UpdateUserRole(UpdateUserRoleRequest) returns (UpdateUserRoleResponse);
  // Update a single User role
  rpc UpdateUserAddons(UpdateUserAddonsRequest) returns (UpdateUserAddonsResponse);
  // Update user delete policy
  rpc UpdateUserDeletePolicy(UpdateUserDeletePolicyRequest)
      returns (UpdateUserDeletePolicyResponse);
}

message DeleteUserRequest {
  string user_name = 1 [(validate.rules).string = { min_len: 1 }];
}

message DeleteUserResponse {
  string message = 1;
  User user = 2;
}

message GetUsersRequest {
  optional bool with_raw = 1;
}

message GetUsersResponse {
  string message = 1;
  repeated User items = 2;
}

message GetUserRequest {
  string user_name = 1;
  optional bool with_raw = 2;
}

message GetUserResponse {
  User user = 1;
}

message CreateUserRequest {
  string user_name = 1           [(validate.rules).string = { min_len: 1, max_len: 50 }];
  string display_name = 2        [(validate.rules).string = { max_len: 63 }];
  repeated string roles = 3;
  string auth_type = 4           [(validate.rules).string = {in: ["", "password-secret", "ldap"]}];
  repeated UserAddon addons = 5;
}

message CreateUserResponse {
  string message = 1;
  User user = 2;
}

message UpdateUserDisplayNameRequest {
  string user_name = 1    [(validate.rules).string = { min_len: 1 }];
  string display_name = 2;
}

message UpdateUserDisplayNameResponse {
  string message = 1;
  User user = 2;
}

message UpdateUserPasswordRequest {
  string user_name = 1        [(validate.rules).string = { min_len: 1 }];
  string current_password = 2 [(validate.rules).string = { min_len: 1 }];
  string new_password = 3     [(validate.rules).string = { min_len: 1 }];
}

message UpdateUserPasswordResponse {
  string message = 1;
}

message UpdateUserRoleRequest {
  string user_name = 1         [(validate.rules).string = { min_len: 1 }];
  repeated string roles = 2;
}

message UpdateUserRoleResponse {
  string message = 1;
  User user = 2;
}

message UpdateUserAddonsRequest {
  string user_name = 1           [(validate.rules).string = { min_len: 1 }];
  repeated UserAddon addons = 2;
}

message UpdateUserAddonsResponse {
  string message = 1;
  User user = 2;
}

message UpdateUserDeletePolicyRequest {
  string user_name = 1           [(validate.rules).string = { min_len: 1 }];
  DeletePolicy delete_policy = 2 [(validate.rules).enum.defined_only = true];
}

message UpdateUserDeletePolicyResponse {
  string message = 1;
  User user = 2;
}
message GetEventsRequest {
  string user_name = 1;
  optional google.protobuf.Timestamp from = 2;
}

message GetEventsResponse {
  string message = 1;
  repeated Event items = 2;
}